--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 body{
-    background-image: url(./images/background2.jpg);
+    background-image: url(background2.jpg);
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
